--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI=mongodb+srv://admin:ABCabc_123@cluster0.9i04a.mongodb.net/users?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:<Password>@cluster0.9i04a.mongodb.net/users?retryWrites=true&w=majority
